bk_ida/gobmkida/c1/show_dragons
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/show_dragons/src/engine/dragon.c:1958:1: error: use of undeclared identifier 'show_dragons_snames'
show_dragons_snames[dragon[i].crude_status], 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/show_dragons/src/engine/dragon.c:1959:1: error: use of undeclared identifier 'show_dragons_snames'
show_dragons_snames[dragon[i].status], 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/show_dragons/src/engine/dragon.c:1964:31: error: use of undeclared identifier 'show_dragons_snames'
gprintf( ", owl status %s\n", show_dragons_snames[dragon[i].owl_status]); 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/show_dragons/src/obj/1/dragon.o] Error 1
